@@ -2,13 +2,14 @@ package com.vi.tenantservice.api.facade;
 
 import static com.vi.tenantservice.api.util.JsonConverter.convertToJson;
 import static java.util.Objects.nonNull;
-import static liquibase.repackaged.org.apache.commons.collections4.ListUtils.emptyIfNull;
+import static org.apache.commons.collections4.ListUtils.emptyIfNull;
 import static org.springframework.util.ObjectUtils.nullSafeEquals;
 
 import com.google.common.collect.Lists;
 import com.vi.tenantservice.api.authorisation.Authority.AuthorityValue;
 import com.vi.tenantservice.api.converter.ConsultingTypePatchDTOConverter;
 import com.vi.tenantservice.api.converter.TenantConverter;
+import com.vi.tenantservice.api.exception.ConsultingTypeCreationException;
 import com.vi.tenantservice.api.exception.TenantNotFoundException;
 import com.vi.tenantservice.api.exception.TenantValidationException;
 import com.vi.tenantservice.api.exception.httpresponse.HttpStatusExceptionReason;
@@ -54,6 +55,7 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort.Direction;
 import org.springframework.stereotype.Service;
+import org.springframework.web.client.RestClientException;
 
 /** Facade to encapsulate services and logic needed to manage tenants */
 @Service
@@ -95,8 +97,20 @@ public class TenantServiceFacade {
     var entity = tenantConverter.toEntity(sanitizedTenantDTO);
     populateTenantSettingsAndActivationDates(entity, tenantDTO);
     TenantEntity createdTenant = tenantService.create(entity);
-    createDefaultConsultingTypeSettings(createdTenant);
+    try {
+      createDefaultConsultingTypeSettings(createdTenant);
+    } catch (ConsultingTypeCreationException ex) {
+      performRollback(createdTenant);
+      log.error(
+          "Error while creating consulting types for tenant with id {}", createdTenant.getId(), ex);
+      throw new BadRequestException(
+          "Error while creating consulting types for tenant with id " + createdTenant.getId());
+    }
     return tenantConverter.toMultilingualDTO(createdTenant);
+  }
+
+  private void performRollback(TenantEntity createdTenant) {
+    tenantService.delete(createdTenant);
   }
 
   private void populateTenantSettingsAndActivationDates(
@@ -110,11 +124,23 @@ public class TenantServiceFacade {
     tenant.setSettings(convertToJson(defaultTenantSettings));
   }
 
-  private void createDefaultConsultingTypeSettings(TenantEntity createdTenant) {
-    consultingTypeService.createDefaultConsultingTypes(createdTenant.getId());
+  private void createDefaultConsultingTypeSettings(TenantEntity createdTenant)
+      throws ConsultingTypeCreationException {
+    try {
+      consultingTypeService.createDefaultConsultingTypes(createdTenant.getId());
+    } catch (RestClientException ex) {
+      throw new ConsultingTypeCreationException(
+          "Consulting types could not be created for tenant with id " + createdTenant.getId(), ex);
+    }
     if (isAttemptToCreateFirstNonTechnicalTenant(createdTenant.getId())) {
       validateSubDomain(createdTenant.getSubdomain());
-      applicationSettingsService.saveMainTenantSubDomain(createdTenant.getSubdomain());
+      try {
+        applicationSettingsService.saveMainTenantSubDomain(createdTenant.getSubdomain());
+      } catch (RestClientException ex) {
+        throw new ConsultingTypeCreationException(
+            "Main tenant subdomain could not be saved for tenant with id " + createdTenant.getId(),
+            ex);
+      }
     }
   }
 
@@ -145,7 +171,7 @@ public class TenantServiceFacade {
   }
 
   private void validateTenantInput(MultilingualTenantDTO tenantDTO) {
-    var isoCountries = Arrays.stream(Locale.getISOLanguages()).collect(Collectors.toList());
+    var isoCountries = Arrays.stream(Locale.getISOLanguages()).toList();
     validateContent(tenantDTO, isoCountries);
     validateSettings(tenantDTO.getSettings());
   }
@@ -160,7 +186,7 @@ public class TenantServiceFacade {
     List<String> invalidLanguages =
         activeLanguages.stream()
             .filter(language -> language == null || language.length() != 2)
-            .collect(Collectors.toList());
+            .toList();
     if (!invalidLanguages.isEmpty()) {
       throw new TenantValidationException(
           HttpStatusExceptionReason.ID_MUST_BE_NULL_WHEN_CREATING_TENANT);
@@ -202,7 +228,7 @@ public class TenantServiceFacade {
     if (translatedMap == null) {
       return Lists.newArrayList();
     }
-    return translatedMap.keySet().stream().map(String::toLowerCase).collect(Collectors.toList());
+    return translatedMap.keySet().stream().map(String::toLowerCase).toList();
   }
 
   private MultilingualTenantDTO updateWithSanitizedInput(
@@ -324,7 +350,7 @@ public class TenantServiceFacade {
   private List<String> getAdminEmails(List<AdminResponseDTO> tenantAdmins) {
     return tenantAdmins.stream()
         .map(admin -> admin.getEmbedded() != null ? admin.getEmbedded().getEmail() : "")
-        .collect(Collectors.toList());
+        .toList();
   }
 
   public Optional<MultilingualTenantDTO> findMultilingualTenantById(Long id) {
@@ -346,9 +372,7 @@ public class TenantServiceFacade {
 
   public List<BasicTenantLicensingDTO> getAllTenants() {
     var tenantEntities = tenantService.getAllTenants();
-    return tenantEntities.stream()
-        .map(tenantConverter::toBasicLicensingTenantDTO)
-        .collect(Collectors.toList());
+    return tenantEntities.stream().map(tenantConverter::toBasicLicensingTenantDTO).toList();
   }
 
   public Optional<RestrictedTenantDTO> findTenantBySubdomain(
@@ -433,7 +457,7 @@ public class TenantServiceFacade {
     var direction = isAscending ? Direction.ASC : Direction.DESC;
     var pageRequest = PageRequest.of(pageNumber, pageSize, direction, fieldName);
     Page<TenantBase> tenantPage = tenantService.findAllExceptTechnicalByInfix(infix, pageRequest);
-    var tenantIds = tenantPage.stream().map(TenantBase::getId).collect(Collectors.toList());
+    var tenantIds = tenantPage.stream().map(TenantBase::getId).toList();
     var fullTenants = tenantService.findAllByIds(tenantIds);
     return mapOf(tenantPage, fullTenants);
   }
@@ -442,7 +466,7 @@ public class TenantServiceFacade {
     var tenantEntities = tenantService.getAllTenants();
     excludeTechnicalTenantFrom(tenantEntities);
     List<AdminTenantDTO> adminTenantDTOS =
-        tenantEntities.stream().map(tenantConverter::toAdminTenantDTO).collect(Collectors.toList());
+        tenantEntities.stream().map(tenantConverter::toAdminTenantDTO).toList();
     adminTenantDTOS.forEach(
         adminTenantDTO ->
             enrichWithAdminData(adminTenantDTO.getId().intValue(), adminTenantDTO::setAdminEmails));
